# mini-cmake-qt

./: CMakeLists.txt
cmake/: QtCommon.cmake  windows_metafile.rc.in
src/: main.cc
translations/: example_en.ts  example_ru.ts
